<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.appcartaoservidorv1.viewmodels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_verde_branco"
        style="@style/FragmentoStyle">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo_cartao_servidor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="25dp"
            android:orientation="vertical"
            android:padding="15dp"
            android:background="@drawable/background_login_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seja_bem_vindo"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                style="@style/TituloStyle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Entre com suas informações de login"
                android:layout_marginBottom="25dp"
                style="@style/SubTituloStyle"/>

            <ProgressBar
                android:id="@+id/Bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/ProgressBarStyle"
                android:visibility="gone"
                android:layout_marginBottom="25dp"/>

            <EditText
                android:id="@+id/Matricula"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="10dp"
                android:paddingHorizontal="15dp"
                android:maxLength="5"
                android:inputType="number"
                android:text="@={viewModel.Matricula}"
                android:layout_marginBottom="7dp"
                style="@style/EntryStyle"
                android:hint="@string/matricula"/>

            <EditText
                android:id="@+id/Senha"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingHorizontal="15dp"
                android:text="@={viewModel.Senha}"
                android:inputType="textPassword"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="7dp"
                style="@style/EntryStyle"
                android:hint="@string/senha"/>

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="wrap_content"
                android:padding="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="@{() -> viewModel.VerificaLogin()}"
                android:layout_marginEnd="30dp"
                android:text="@string/entrar"
                android:textColor="@color/Branco"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>